# Laundrex_app_project

./: .env  alembic.ini  database.db  database.sqlite  main.py  pyproject.toml  test_email.py
Database/: db.py
Models/: contact.py  news_models.py  payment_schema.py  user_bookings.py  user_models.py
Routes/: booking_routes.py  contact_services.py  crud.py  func.py  news_routes.py  payment.py  user_routes.py
migration/: env.py
migration/versions/: d5e36501e803_alembic_setup.py
